# learning-wgpu-with-bevy

./: Cargo.toml  README.md
assets/shaders/: direct.wgsl  pixel_simulation.wgsl
src/: main.rs
src/shader/: pixel_simulation.wgsl  test.wgsl
src/state/: mod.rs  surface_state.rs
