[package]
name = "rnoita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy" }
bytemuck = "1.13.1"
env_logger = "0.10.0"
line_drawing = "1.0.0"
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.16.0"
winit = "0.28.3"
