[package]
name = "rnoita"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.0"}
bytemuck = "1.13.1"
env_logger = "0.11.2"
line_drawing = "1.0.0"
log = "0.4.17"
pollster = "0.3.0"
wgpu = "0.19.1"
winit = "0.29.10"
